--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ wheels/
 *.c3d
 *.skeleton
 *.mid
+*.mat
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
